--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>SVGIE</title>
 </head>
 <style>
@@ -21,20 +20,19 @@
 /* page content */
 h2{
   color: black;
-  font-family:cursive;
+  font-family: Trebuchet MS;
   text-align: center;
-  font-size: 20rem;
-  margin-top:2rem;
-  margin-bottom: 0;
+  font-size: 6rem;
+  margin-top: 15rem;
+  margin-bottom:0;
 }
 button{
   background-color: green ;
-  font-size: 5rem;
+  font-size: 1.5rem;
   font-family:cursive;
   border: 2px solid black;
   border-radius: 50px;
-}
-</style>
+}</style>
 <body>
 
     <video id="background-video" autoplay loop muted poster="./Background.mp4">
